# hytale-bot

./: Cargo.toml  Makefile  README.md  ideias.md
src/: main.rs  net.rs  token.rs
src/auth/: api.rs  mod.rs  oauth.rs  session.rs
src/protocol/: codec.rs  common.rs  constants.rs  handler.rs  mod.rs  packets.rs
src/utils/: debug.rs  jwt.rs  mod.rs
