[package]
name = "hytale-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.11.0"
quinn = "0.11.9"
rand = "0.8"
reqwest = { version = "0.13.1", features = ["json", "form"] }
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
uuid = "1.19.0"
warp = { version = "0.4.2", features = ["server"] }
webbrowser = "1.0.6"
